<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F5F5F5"
    tools:context=".user.home.auth.ForgetPassNextActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
 >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout style="@style/settings">


                <TextView
                    style="@style/setMineItemTitle"
                    android:layout_centerVertical="true"
                    android:text="@string/mine_card_select" />

                <TextView
                    android:id="@+id/tv_change_user_nick"
                    style="@style/itemRightImage"
                    android:layout_marginRight="25dp"
                    android:text="XC3-HiLink" />

                <ImageView
                    style="@style/itemRightImage1"
                    android:src="@mipmap/mine_back_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlControlCom"
                style="@style/settings">


                <TextView

                    style="@style/setMineItemTitle"
                    android:layout_centerVertical="true"
                    android:text="@string/mine_card_network_name" />

                <TextView
                    android:id="@+id/iv_change_user_nick"
                    style="@style/itemRightImage"
                    android:layout_marginRight="25dp" />

                <ImageView
                    style="@style/itemRightImage1"
                    android:src="@mipmap/mine_back_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlControlS"
                style="@style/settings">


                <TextView
                    style="@style/setMineItemTitle"
                    android:layout_centerVertical="true"
                    android:text="@string/mine_card_keep_time" />

                <TextView
                    android:id="@+id/iv_change_user_phone"
                    style="@style/itemRightImage"
                    android:layout_marginRight="25dp" />

                <ImageView
                    style="@style/itemRightImage1"
                    android:src="@mipmap/mine_back_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlFenceAlarm"
                style="@style/settings">


                <TextView

                    style="@style/setMineItemTitle"
                    android:layout_centerVertical="true"

                    android:text="@string/mine_card_problem_from" />

                <TextView
                    android:id="@+id/iv_change_login_password"
                    style="@style/itemRightImage"

                    android:layout_marginRight="25dp" />

                <ImageView
                    style="@style/itemRightImage1"
                    android:src="@mipmap/mine_back_icon" />
            </RelativeLayout>

            <RelativeLayout

                style="@style/settings">

                <TextView
                    style="@style/setMineItemTitle"
                    android:layout_centerVertical="true"

                    android:text="@string/mine_card_problem_type" />

                <TextView
                    android:id="@+id/tv_card_problem_name"
                    style="@style/itemRightImage"
                    android:layout_marginRight="25dp" />

                <ImageView
                    style="@style/itemRightImage1"
                    android:src="@mipmap/mine_back_icon" />
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tv_msg_point"
                    style="@style/setMineItemTitle"
                    android:paddingLeft="12dp"

                    android:text="@string/mine_card_msg_point" />
                <TextView
                    style="@style/itemRightImage"
                    android:paddingLeft="12dp"
                    android:layout_marginLeft="@dimen/margin_right_24dp"
                    android:text="@string/mine_card_msg_point_in"
                    android:layout_below="@+id/tv_msg_point"
                    android:layout_marginRight="45dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_remove_bind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginStart="@dimen/margin_left_24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_right_24dp"
        android:background="@drawable/shape_btn_confirm_pressed"
        android:text="@string/mine_card_recall_repair"
        android:textAllCaps="false"
        android:textColor="@color/white_full"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>